--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
